fix: premiacoes-photo right:-200px width:561px (shifted 200px right)

--- a/styles.css
+++ b/styles.css
@@ -357,9 +357,9 @@ ul{list-style:none}
 /* Photo: absolute in .premiacoes */
 .premiacoes-photo{
   position:absolute;
-  right:0;
+  right:-200px;
   top:0;
-  width:560px;
+  width:561px;
   height:auto;
   border-radius:24px;
   display:block;
